fix: Fix dropdown panel hidden behind sibling trigger buttons (#901)

--- a/src/components/lukso-dropdown/style.css
+++ b/src/components/lukso-dropdown/style.css
@@ -1,3 +1,6 @@
 :host {
   @apply flex w-full;
+
+  position: relative;
+  height: 0;
 }
